--- a/vue-develop/package.json
+++ b/vue-develop/package.json
@@ -19,6 +19,7 @@
     "babel-eslint": "^10.0.2",
     "eslint": "^6.0.1",
     "eslint-plugin-vue": "^5.2.3",
+    "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
