--- a/vue-develop/package.json
+++ b/vue-develop/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.28",
     "chart.js": "^2.8.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2"
