--- a/vue-develop/package.json
+++ b/vue-develop/package.json
@@ -8,19 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.28",
-    "chart.js": "^2.8.0",
+    "bootstrap-vue": "^2.1.0",
+    "chart.js": "^2.9.3",
     "vue": "^2.6.10",
-    "vue-chartjs": "^3.4.2"
+    "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.2.2",
-    "eslint-plugin-vue": "^5.2.3",
-    "vue-router": "^3.1.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.0.1",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
