--- a/vue-develop/package.json
+++ b/vue-develop/package.json
@@ -11,7 +11,9 @@
     "bootstrap-vue": "^2.21.2",
     "chart.js": "^2.9.4",
     "vue": "^2.6.14",
-    "vue-chartjs": "^3.5.1"
+    "vue-chartjs": "^3.5.1",
+    "ansi-regex": ">=5.0.1",
+    "nth-check": ">=2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.15",
